--- a/amplify.yml
+++ b/amplify.yml
@@ -3,13 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - python3 -m pip cache purge  # Add this line first
         - python3 -m pip install --upgrade pip
         - python3 -m pip install -r requirements.txt --user
         - export PATH="/root/.local/bin:$PATH"
         - git config --global safe.directory /codebuild/output/src*/src/*
     build:
       commands:
+        - echo "Python path:" && which python3
+        - echo "Mkdocs path:" && which mkdocs
+        - echo "Installed packages:" && cat pip_versions.txt
         - mkdocs build --verbose
   artifacts:
     baseDirectory: site
