--- a/amplify.yml
+++ b/amplify.yml
@@ -14,7 +14,7 @@ frontend:
         - echo "Markdown version:" && python3 -c "import markdown; print(markdown.__version__)"
         - echo "Testing markdown processing:" 
         - python3 -c "import markdown; print(markdown.markdown('![test](test.png)'))"
-        - mkdocs build --verbose --strict
+        - python3 -m mkdocs build --verbose --strict
   artifacts:
     baseDirectory: site
     files:
