--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
+# Core dependencies
 Markdown==3.7
-babel==2.16.0
-boto3==1.35.59
-botocore==1.35.59
-ghp-import==2.1.0
-gitdb==4.0.11
-GitPython==3.1.43
-Jinja2==3.1.4
-markdown-lightbox @ git+https://github.com/aleksan4eg/markdown-lightbox.git@57cebe72578095849ef5f01720f6fa6d34162fda
-mergedeep==1.3.4
 mkdocs==1.6.1
-mkdocs-autorefs==1.2.0
-mkdocs-bibtex==2.16.2
-mkdocs-gen-files==0.5.0
-mkdocs-git-revision-date-localized-plugin==1.3.0
-mkdocs-git-revision-date-plugin==0.3.2
-mkdocs-include-markdown-plugin==7.0.0
 -e git+https://github.com/squidfunk/mkdocs-material.git@8.5.11#egg=mkdocs-material
-mkdocs-material-extensions==1.3.1
+
+# Extensions
+markdown-lightbox @ git+https://github.com/aleksan4eg/markdown-lightbox.git@57cebe72578095849ef5f01720f6fa6d34162fda
+mkdocs-git-revision-date-plugin==0.3.2
+mkdocs-git-revision-date-localized-plugin==1.3.0
+mkdocs-include-markdown-plugin==7.0.0
 mkdocs-print-site-plugin==2.6.0
 mkdocstrings==0.27.0
+mkdocs-bibtex==2.16.2
+mkdocs-gen-files==0.5.0
 pymdown-extensions==10.12
+
+# Required dependencies for extensions
 PyYAML==6.0.2
-pyyaml_env_tag==0.1
+GitPython==3.1.43
+Jinja2==3.1.4
