--- a/amplify.yml
+++ b/amplify.yml
@@ -4,21 +4,17 @@ frontend:
     preBuild:
       commands:
         - python3 -m pip install --upgrade pip
-        - python3 -m pip install markdown>=3.4.0
-        - python3 -m pip install -r requirements.txt
+        - python3 -m pip install -r requirements.txt --user
+        - export PATH="/root/.local/bin:$PATH"
         - git config --global safe.directory /codebuild/output/src*/src/*
     build:
       commands:
-        - echo "Python version:" && python3 --version
-        - echo "Pip version:" && pip --version
-        - echo "Markdown version:" && python3 -c "import markdown; print(markdown.__version__)"
-        - echo "Testing markdown processing:" 
-        - python3 -c "import markdown; print(markdown.markdown('![test](test.png)'))"
-        - python3 -m mkdocs build --verbose --strict
+        - mkdocs build --verbose
   artifacts:
     baseDirectory: site
     files:
       - '**/*'
   cache:
-    paths: 
+    paths:
       - ~/.cache/pip
+      - ~/.local/lib/python3.10/site-packages
