--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,4 @@ mkdocstrings==0.27.0
 mkdocs-bibtex==2.16.2
 mkdocs-gen-files==0.5.0
 pymdown-extensions==10.12
-
-# Required dependencies for extensions
-PyYAML==6.0.2
-GitPython==3.1.43
-Jinja2==3.1.4
+boto3
